anadida funcion para sumar total y creado archivo precios, tambien se borro la funcion de calculadora de 2 digitos

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
             </select><br>
 
 <!-- ------------------------------------------------------------------------------------------------ -->
- <!-- Zona para formulario de datos cliente -->
+ <!-- Zona para caalculo del precio total a pagar por el carrito -->
+
+<!-- ------------------------------------------------------------------------------------------------ -->
+<!-- Zona para formulario de datos cliente -->
 <form id="Formulario">
     <h2>Datos del cliente</h2>
     <label for="nombre">Nombre:</label>
