--- a/index.html
+++ b/index.html
@@ -15,86 +15,77 @@
         <div id="productos"></div> <!-- Zona para seleccionar y agregar productos al carrito -->
             <h1>Arma tu PC</h1>
             <h2>Componentes</h2>
-            <label for="placa-madre">Placa madre:</label><br>
+            <label for="placa-madre" class="componente">Placa madre:</label><br>
             <select id="placa-madre">
-                <option value="+">ASRock B450M Pro4 </option> <!-- gamma baja -->
-                <option value="-">MSI B550M PRO-VDH WiFi </option> <!-- gamma media-baja -->
-                <option value="*">Gigabyte B660M DS3H DDR4</option> <!-- gamma media -->
-                <option value="/">ASUS TUF Gaming B760-PLUS WIFI D4</option> <!-- gamma media-alta -->
-                <option value="/">MSI MAG X670E TOMAHAWK WIFI</option> <!-- gamma alta -->
-                <option value="/">ASUS ROG Strix Z790-E Gaming WiFi </option> <!-- gamma alta -->
-                <option value="/">ASRock Z790 Taichi Carrara</option> <!-- gamma premium ;)-->
+                <option value="0" selected> --- </option> <!-- sin eleccion, el atributo selected hace que este seleccionado por defecto-->
+                <option value="60">ASRock B450M Pro4 </option> <!-- gamma baja -->
+                <option value="120">MSI B550M PRO-VDH WiFi </option> <!-- gamma media-baja -->
+                <option value="180">Gigabyte B660M DS3H DDR4</option> <!-- gamma media -->
+                <option value="240">ASUS TUF Gaming B760-PLUS WIFI D4</option> <!-- gamma media-alta -->
+                <option value="300">MSI MAG X670E TOMAHAWK WIFI</option> <!-- gamma alta -->
+                <option value="360">ASUS ROG Strix Z790-E Gaming WiFi </option> <!-- gamma alta -->
+                <option value="420">ASRock Z790 Taichi Carrara</option> <!-- gamma premium ;)-->
             </select><br>
 
-            <label for="procesador">Procesador:</label><br>
+            <label for="procesador" class="componente">Procesador:</label><br>
             <select id="procesador">
-                <option value="+">Intel i3</option>
-                <option value="-">Intel i5</option>
-                <option value="*">Intel i7</option>
-                <option value="/">Intel i9</option>
+                <option value="0" selected> --- </option> <!-- sin eleccion -->
+                <option value="250">Intel i3</option>
+                <option value="300">Intel i5</option>
+                <option value="350">Intel i7</option>
+                <option value="400">Intel i9</option>
             </select><br>
 
-            <label for="ram">Cantidad de memoria RAM:</label><br>
+            <label for="ram" class="componente">Cantidad de memoria RAM:</label><br>
             <select id="ram">
-                <option value="+">4 GB</option>
-                <option value="-">8 GB</option>
-                <option value="*">12 GB</option>
-                <option value="/">16 GB</option>
-                <option value="/">24 GB</option>
-                <option value="/">32 GB</option>
-                <option value="/">64 GB</option>
+                <option value="0" selected> --- </option> <!-- sin eleccion -->
+                <option value="25">4 GB</option>
+                <option value="45">8 GB</option>
+                <option value="65">12 GB</option>
+                <option value="85">16 GB</option>
+                <option value="105">24 GB</option>
+                <option value="125">32 GB</option>
+                <option value="145">64 GB</option>
             </select><br>
 
-            <label for="grafica">Tarjeta grafica:</label>
+            <label for="grafica" class="componente">Tarjeta grafica:</label>
             <select id="grafica">
-                <option value="+">NVIDIA GeForce GTX 1650 </option> <!-- gamma baja -->
-                <option value="-">AMD Radeon RX 6500 XT </option> <!-- gamma baja -->
-                <option value="*">NVIDIA GeForce RTX 3050</option> <!-- gamma media -->
-                <option value="/">AMD Radeon RX 6600 XT</option> <!-- gamma media -->
-                <option value="/">VIDIA GeForce RTX 4070 </option> <!-- gamma alta -->
-                <option value="/">AMD Radeon RX 7900 XT</option> <!-- gamma alta -->
-                <option value="/">NVIDIA GeForce RTX 4090 </option> <!-- gamma ultra-->
+                <option value="0" selected> --- </option> <!-- sin eleccion -->
+                <option value="150">NVIDIA GeForce GTX 1650 </option> <!-- gamma baja -->
+                <option value="140">AMD Radeon RX 6500 XT </option> <!-- gamma baja -->
+                <option value="250">NVIDIA GeForce RTX 3050</option> <!-- gamma media -->
+                <option value="240">AMD Radeon RX 6600 XT</option> <!-- gamma media -->
+                <option value="350">NVIDIA GeForce RTX 4070 </option> <!-- gamma alta -->
+                <option value="340">AMD Radeon RX 7900 XT</option> <!-- gamma alta -->
+                <option value="450">NVIDIA GeForce RTX 4090 </option> <!-- gamma ultra-->
             </select><br>
+            <p>Valor Total:</p>
+            <p id="resultado">$0</p>
 
 <!-- ------------------------------------------------------------------------------------------------ -->
  <!-- Zona para caalculo del precio total a pagar por el carrito -->
 
 <!-- ------------------------------------------------------------------------------------------------ -->
 <!-- Zona para formulario de datos cliente -->
-<form id="Formulario">
-    <h2>Datos del cliente</h2>
-    <label for="nombre">Nombre:</label>
-    <input type="text" id="nombre" placeholder="Ingresa tu nombre">
-    <label for="email">Email:</label>
-    <input type="email" id="email" placeholder="Ingresa tu email">
-    <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" placeholder="Ingresa tu dirección">
-    <div id="EmailValid"></div> <!-- Div para mostrar mensajes de validación -->
-    <div id="NombreValid"></div> <!-- Div para mostrar mensajes de validación -->
-    <div id="DireccionValid"></div> <!-- Div para mostrar mensajes de validación -->
+        <form id="Formulario">
+            <h2>Datos del cliente</h2>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" placeholder="Ingresa tu nombre">
+            <label for="email">Email:</label>
+            <input type="email" id="email" placeholder="Ingresa tu email">
+            <label for="direccion">Dirección:</label>
+            <input type="text" id="direccion" placeholder="Ingresa tu dirección">
+            <div id="EmailValid"></div> <!-- Div para mostrar mensajes de validación -->
+            <div id="NombreValid"></div> <!-- Div para mostrar mensajes de validación -->
+            <div id="DireccionValid"></div> <!-- Div para mostrar mensajes de validación -->
 
-    <button type="submit">Registrar</button> <!-- Botón para enviar el formulario -->
-    <!--La propiedad `type="submit"` se utiliza en `<button>` o `<input>` dentro de formularios. Su función principal es indicar que, al hacer clic en ese botón, se debe enviar el formulario al servidor para su procesamiento. Cuando un usuario presiona un botón con este atributo, el navegador recopila todos los datos ingresados en los campos del formulario y realiza una solicitud HTTP (por defecto, de tipo POST o GET según el atributo `method` del formulario).-->
-</form>
+            <button type="submit">Validar datos</button> <!-- Botón para enviar el formulario -->
+            <!--La propiedad `type="submit"` se utiliza en `<button>` o `<input>` dentro de formularios. Su función principal es indicar que, al hacer clic en ese botón, se debe enviar el formulario al servidor para su procesamiento. Cuando un usuario presiona un botón con este atributo, el navegador recopila todos los datos ingresados en los campos del formulario y realiza una solicitud HTTP (por defecto, de tipo POST o GET según el atributo `method` del formulario).-->
+        </form>
 
 
 
 <!-- ------------------------------------------------------------------------------------------------ -->
- <!-- Zona para caalculo del precio total a pagar por el carrito -->
-        <div id="calculo">
-            <h2>Valor Total</h2>
-            <input type="number" id="num1" placeholder="Primera cifra"></input>
-            <label for="operacion">Operación:</label>
-            <select id="operacion">
-                <option value="+">Suma</option>
-                <option value="-">Resta</option>
-                <option value="*">Multiplicación</option>
-                <option value="/">División</option>
-            </select>
-            <input type="number" id="num2" placeholder="Segunda cifra"></input>
-            <button onclick="calcular('num1', 'operacion','num2')">Calcular</button>
-            <p id="resultado">""</p>
-        </div>
     </main>
 
 <script src="script.js"></script> <!-- Para que el archivo script.js esté bien enlazado en el HTML se debe usar la etiqueta <script src="script.js"></script> justo antes de cerrar el body, no usar la etiqueta a para enlazar scripts.-->
