--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--sirve para controlar cómo se muestra la página en dispositivos móviles. Específicamente, ajusta el ancho de la página al ancho de la pantalla del dispositivo y establece el nivel de zoom inicial en 1.0. Esto ayuda a que el diseño sea responsivo y se vea bien en celulares y tablets. -->
     <a> <link rel="stylesheet" href="style.css"></a>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="computer(1).png">  <!--Link al favicon -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,82 +13,92 @@
 </head>
 <body>
     <main>
-        <div id="productos"></div> <!-- Zona para seleccionar y agregar productos al carrito -->
+        <div id="productos"> <!-- Zona para seleccionar y agregar productos al carrito -->
             <h1>Arma tu PC</h1>
             <h2>Componentes</h2>
             <label for="placa-madre" class="componente">Placa madre:</label><br>
             <select id="placa-madre">
                 <option value="0" selected> --- </option> <!-- sin eleccion, el atributo selected hace que este seleccionado por defecto-->
-                <option value="60">ASRock B450M Pro4 </option> <!-- gamma baja -->
-                <option value="120">MSI B550M PRO-VDH WiFi </option> <!-- gamma media-baja -->
-                <option value="180">Gigabyte B660M DS3H DDR4</option> <!-- gamma media -->
-                <option value="240">ASUS TUF Gaming B760-PLUS WIFI D4</option> <!-- gamma media-alta -->
-                <option value="300">MSI MAG X670E TOMAHAWK WIFI</option> <!-- gamma alta -->
-                <option value="360">ASUS ROG Strix Z790-E Gaming WiFi </option> <!-- gamma alta -->
-                <option value="420">ASRock Z790 Taichi Carrara</option> <!-- gamma premium ;)-->
+                <option value="60">ASRock B450M Pro4  |  $60</option> <!-- gamma baja -->
+                <option value="120">MSI B550M PRO-VDH WiFi  |  $120</option> <!-- gamma media-baja -->
+                <option value="180">Gigabyte B660M DS3H DDR4  |  $180</option> <!-- gamma media -->
+                <option value="240">ASUS TUF Gaming B760-PLUS WIFI D4  |  $240</option> <!-- gamma media-alta -->
+                <option value="300">MSI MAG X670E TOMAHAWK WIFI  |  $300</option> <!-- gamma alta -->
+                <option value="360">ASUS ROG Strix Z790-E Gaming WiFi  |  $360</option> <!-- gamma alta -->
+                <option value="420">ASRock Z790 Taichi Carrara  |  $420</option> <!-- gamma premium ;)-->
             </select><br>
 
             <label for="procesador" class="componente">Procesador:</label><br>
             <select id="procesador">
                 <option value="0" selected> --- </option> <!-- sin eleccion -->
-                <option value="250">Intel i3</option>
-                <option value="300">Intel i5</option>
-                <option value="350">Intel i7</option>
-                <option value="400">Intel i9</option>
+                <option value="250">Intel i3  |  $250</option>
+                <option value="300">Intel i5  |  $300</option>
+                <option value="350">Intel i7  |  $350</option>
+                <option value="400">Intel i9  |  $400</option>
             </select><br>
 
             <label for="ram" class="componente">Cantidad de memoria RAM:</label><br>
             <select id="ram">
                 <option value="0" selected> --- </option> <!-- sin eleccion -->
-                <option value="25">4 GB</option>
-                <option value="45">8 GB</option>
-                <option value="65">12 GB</option>
-                <option value="85">16 GB</option>
-                <option value="105">24 GB</option>
-                <option value="125">32 GB</option>
-                <option value="145">64 GB</option>
+                <option value="25">4 GB | $25</option>
+                <option value="45">8 GB | $45</option>
+                <option value="65">12 GB | $65</option>
+                <option value="85">16 GB | $85</option>
+                <option value="105">24 GB | $105</option>
+                <option value="125">32 GB | $125</option>
+                <option value="145">64 GB | $145</option>
             </select><br>
 
-            <label for="grafica" class="componente">Tarjeta grafica:</label>
+            <label for="grafica" class="componente">Tarjeta grafica:</label><br>
             <select id="grafica">
                 <option value="0" selected> --- </option> <!-- sin eleccion -->
-                <option value="150">NVIDIA GeForce GTX 1650 </option> <!-- gamma baja -->
-                <option value="140">AMD Radeon RX 6500 XT </option> <!-- gamma baja -->
-                <option value="250">NVIDIA GeForce RTX 3050</option> <!-- gamma media -->
-                <option value="240">AMD Radeon RX 6600 XT</option> <!-- gamma media -->
-                <option value="350">NVIDIA GeForce RTX 4070 </option> <!-- gamma alta -->
-                <option value="340">AMD Radeon RX 7900 XT</option> <!-- gamma alta -->
-                <option value="450">NVIDIA GeForce RTX 4090 </option> <!-- gamma ultra-->
+                <option value="150">NVIDIA GeForce GTX 1650  | $150</option> <!-- gamma baja -->
+                <option value="140">AMD Radeon RX 6500 XT  | $140</option> <!-- gamma baja -->
+                <option value="250">NVIDIA GeForce RTX 3050 | $250</option> <!-- gamma media -->
+                <option value="240">AMD Radeon RX 6600 XT | $240</option> <!-- gamma media -->
+                <option value="350">NVIDIA GeForce RTX 4070  | $350</option> <!-- gamma alta -->
+                <option value="340">AMD Radeon RX 7900 XT | $340</option> <!-- gamma alta -->
+                <option value="450">NVIDIA GeForce RTX 4090  | $450</option> <!-- gamma ultra-->
             </select><br>
-            <p>Valor Total:</p>
+            <p>Valor Total:</p><br>
             <p id="resultado">$0</p>
+            <div id="placaValid"><br></div> <!-- Div para mostrar mensajes de validación -->
+            <div id="procesador"></div> <!-- Div para mostrar mensajes de validación -->
+            <div id="ramValid"></div> <!-- Div para mostrar mensajes de validación -->
+            <div id="graficaValid"></div> <!-- Div para mostrar mensajes de validación -->
+            <p><i>Recuerde seleccionar todos los componentes antes de continuar.</i></p>
 
-<!-- ------------------------------------------------------------------------------------------------ -->
- <!-- Zona para caalculo del precio total a pagar por el carrito -->
-
+        </div>
+<!--  -->
 <!-- ------------------------------------------------------------------------------------------------ -->
 <!-- Zona para formulario de datos cliente -->
         <form id="Formulario">
-            <h2>Datos del cliente</h2>
-            <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" placeholder="Ingresa tu nombre">
-            <label for="email">Email:</label>
-            <input type="email" id="email" placeholder="Ingresa tu email">
-            <label for="direccion">Dirección:</label>
-            <input type="text" id="direccion" placeholder="Ingresa tu dirección">
-            <div id="EmailValid"></div> <!-- Div para mostrar mensajes de validación -->
+            <h2>Datos del cliente</h2><br>
+            <label for="nombre">Nombre:</label><br>
+            <input type="text" id="nombre" placeholder="Ingresa tu nombre"><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" placeholder="Ingresa tu email"><br>
+            <label for="direccion">Dirección:</label><br>
+            <input type="text" id="direccion" placeholder="Ingresa tu dirección"><br>
+            <div id="EmailValid"><br></div> <!-- Div para mostrar mensajes de validación -->
             <div id="NombreValid"></div> <!-- Div para mostrar mensajes de validación -->
             <div id="DireccionValid"></div> <!-- Div para mostrar mensajes de validación -->
-
+            <br>
             <button type="submit">Validar datos</button> <!-- Botón para enviar el formulario -->
+            <p> </p><br>
+            <button type="submit" id="botonCarrito" class="oculto" >Realizar<br> compra</button> <!-- Botón para enviar el formulario -->
+            <p> </p><br>
             <!--La propiedad `type="submit"` se utiliza en `<button>` o `<input>` dentro de formularios. Su función principal es indicar que, al hacer clic en ese botón, se debe enviar el formulario al servidor para su procesamiento. Cuando un usuario presiona un botón con este atributo, el navegador recopila todos los datos ingresados en los campos del formulario y realiza una solicitud HTTP (por defecto, de tipo POST o GET según el atributo `method` del formulario).-->
         </form>
-
-
+<!-- ------------------------------------------------------------------------------------------------ -->
+<div id="video" class="oculto">
+    <video src="videoplayback.mp4" autoplay></video>
+</div>
 
 <!-- ------------------------------------------------------------------------------------------------ -->
     </main>
 
 <script src="script.js"></script> <!-- Para que el archivo script.js esté bien enlazado en el HTML se debe usar la etiqueta <script src="script.js"></script> justo antes de cerrar el body, no usar la etiqueta a para enlazar scripts.-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
